Update: Formulario estilos

--- a/src/views/registrar_infraestructura.html
+++ b/src/views/registrar_infraestructura.html
@@ -30,233 +30,270 @@
     </header>
     <main>
       <section class="formulario">
-        
         <section class="formulario__separadoresTitulo">
           <p>1. Datos del Usuario Final. *</p>
+          <img
+            src="../../public/images/more_black.svg"
+            alt=""
+            id="botonUsuario"
+          />
         </section>
-        
-        <section class="formulario__contenedorInputs" id="datosUsuario">
-          <section class="formulario__tresColumnas">
-            <section class="formulario__tresColumnas--inputText">
-              <p>Apellido Paterno</p>
-              <input type="text" name="" id="" />
+
+        <section class="contenedorBorde" id="datosUsuario">
+          <section class="contenedorWidth">
+            <section class="formulario__tresColumnas">
+              <section class="formulario__tresColumnas--inputText">
+                <p>Apellido Paterno</p>
+                <input type="text" name="" id="" />
+              </section>
+              <section class="formulario__tresColumnas--inputText">
+                <p>Apellido Materno</p>
+                <input type="text" name="" id="" />
+              </section>
+              <section class="formulario__tresColumnas--inputText">
+                <p>Nombre(s)</p>
+                <input type="text" name="" id="" />
+              </section>
             </section>
-            <section class="formulario__tresColumnas--inputText">
-              <p>Apellido Materno</p>
-              <input type="text" name="" id="" />
+            <p class="formulario__separadores">
+              Datos de contacto para oír y recibir notificaciones
+            </p>
+            <span></span>
+
+            <section class="formulario__dosColumnas">
+              <section class="formulario__dosColumnas--inputText">
+                <p>Correo electronico:</p>
+                <input type="text" name="" id="" />
+              </section>
+              <section class="formulario__dosColumnas--inputText">
+                <p>Teléfono:</p>
+                <input type="text" name="" id="" />
+              </section>
             </section>
-            <section class="formulario__tresColumnas--inputText">
-              <p>Nombre(s)</p>
-              <input type="text" name="" id="" />
+
+            <p class="formulario__separadores">
+              Datos del domicilio donde se requiere el servicio
+            </p>
+            <span></span>
+
+            <section class="formulario__tresColumnas">
+              <section class="formulario__tresColumnas--inputText">
+                <p>Calle, no. Exterior:</p>
+                <input type="text" name="" id="" />
+              </section>
+              <section class="formulario__tresColumnas--inputText">
+                <p>Código Postal:</p>
+                <input type="text" name="" id="" />
+              </section>
+              <section class="formulario__tresColumnas--inputText">
+                <p>Colonia:</p>
+                <input type="text" name="" id="" />
+              </section>
+            </section>
+
+            <section class="formulario__dosColumnas">
+              <section class="formulario__dosColumnas--inputText">
+                <p>Delegación/Municipio:</p>
+                <input type="text" name="" id="" />
+              </section>
+              <section class="formulario__dosColumnas--inputText">
+                <p>Entidad Federativa:</p>
+                <input type="text" name="" id="" />
+              </section>
+            </section>
+
+            <p class="formulario__separadores">Coordeandas geográficas</p>
+            <span></span>
+
+            <section class="formulario__tresColumnas">
+              <section class="formulario__tresColumnas--inputText">
+                <p>Altitud:</p>
+                <input type="text" name="" id="" />
+              </section>
+              <section class="formulario__tresColumnas--inputText">
+                <p>Latitud:</p>
+                <input type="text" name="" id="" />
+              </section>
+            </section>
+
+            <p class="formulario__separadores">
+              Registro de Usuario (RMU/RPU cuando aplique)
+            </p>
+            <span></span>
+
+            <section class="formulario__tresColumnas">
+              <section class="formulario__tresColumnas--inputText">
+                <p>Usuario:</p>
+                <input type="text" name="" id="" />
+              </section>
             </section>
           </section>
-          <p class="formulario__separadores">
-            Datos de contacto para oír y recibir notificaciones
+        </section>
+
+        <section class="formulario__separadoresTitulo">
+          <p>2. Datos del Servicio de Suminsitro Eléctrico. *</p>
+          <img
+            src="../../public/images/more_black.svg"
+            alt=""
+            srcset=""
+            id="botonSuministro"
+          />
+        </section>
+
+        <section class="contenedorBorde" id="datosSuministro">
+          <section class="contenedorWidth">
+            <section class="formulario__dosColumnas">
+              <section class="formulario__dosColumnas--inputText">
+                <p>Nivel de Tensión:</p>
+                <select name="" id="">
+                  <option value="0" selected>-------------</option>
+                  <option value="1">Media Tensión</option>
+                  <option value="2">Baja Tensión</option>
+                </select>
+              </section>
+
+              <section class="formulario__dosColumnas--inputText">
+                <p>Tipo de Inmueble:</p>
+                <select name="" id="">
+                  <option value="0" selected>-------------</option>
+                  <option value="1">Electrolinera</option>
+                  <option value="1">Electroterminal</option>
+                  <option value="1">Estación de carga pública</option>
+                  <option value="2">
+                    Inmueble bajo régimen de propiedad en condominio
+                  </option>
+                </select>
+              </section>
+            </section>
+
+            <section class="formulario__tresColumnas">
+              <section class="formulario__tresColumnas--inputText">
+                <p>Demanda a contratar [kW]:</p>
+                <input type="text" name="" id="" />
+              </section>
+
+              <section class="formulario__tresColumnas--inputText">
+                <p>Número de Fases:</p>
+                <input type="text" name="" id="" />
+              </section>
+              <section class="formulario__tresColumnas--inputText">
+                <p>Número de Hilos:</p>
+                <input type="text" name="" id="" />
+              </section>
+            </section>
+
+            <section class="formulario__tresColumnas">
+              <section class="formulario__tresColumnas--inputText">
+                <p>Tensión nominal [kV]:</p>
+                <input type="text" name="" id="" />
+              </section>
+              <section class="formulario__tresColumnas--inputText">
+                <p>Tensión máxima [kV]:</p>
+                <input type="text" name="" id="" />
+              </section>
+              <section class="formulario__tresColumnas--inputText">
+                <p>Tensión mínima [kV]:</p>
+                <input type="text" name="" id="" />
+              </section>
+            </section>
+          </section>
+        </section>
+
+        <section class="formulario__separadoresTitulo">
+          <p>3. Datos de la Infraestructura de carga. *</p>
+          <img src="../../public/images/more_black.svg" alt="" id="botonInfraestructura"/>
+        </section>
+        <!-- 
+        <section class="contenedorBorde" id="datosSuministro">
+          <section class="contenedorWidth">
+          </section>
+        </section> -->
+
+        <section class="contenedorBorde" id="datosInfraestructura">
+          <section class="contenedorWidth">
+            <section class="formulario__dosColumnas">
+              <section class="formulario__dosColumnas--inputText">
+                <p>Tipo de Cargador:</p>
+                <select name="" id="">
+                  <option value="0" selected>-------------</option>
+                  <option value="1">Nivel 1</option>
+                  <option value="2">Nivel 2</option>
+                  <option value="2">Cargador rápido de CC</option>
+                </select>
+              </section>
+
+              <section class="formulario__dosColumnas--inputText">
+                <p>Otras Características:</p>
+                <select name="" id="">
+                  <option value="0" selected>-------------</option>
+                  <option value="0">Ninguna</option>
+                  <option value="1">Unimodal</option>
+                  <option value="1">Multimodal</option>
+                  <option value="1">Unimodal y Multimodal</option>
+                </select>
+              </section>
+            </section>
+
+            <section class="formulario__tresColumnas">
+              <section class="formulario__tresColumnas--inputText">
+                <p>Número de cargadores a instalar:</p>
+                <input type="text" name="" id="" />
+              </section>
+              <section class="formulario__tresColumnas--inputText">
+                <p>Capacidad nominal de cada cargador:</p>
+                <input type="text" name="" id="" />
+              </section>
+              <section class="formulario__tresColumnas--inputText">
+                <p>Capacidad nominal total:</p>
+                <input type="text" name="" id="" />
+              </section>
+            </section>
+
+            <section class="formulario__tresColumnas">
+              <section class="formulario__tresColumnas--inputText">
+                <p>Marca del cargador:</p>
+                <input type="text" name="" id="" />
+              </section>
+              <section class="formulario__tresColumnas--inputText">
+                <p>Modelo del cargador:</p>
+                <input type="text" name="" id="" />
+              </section>
+              <section class="formulario__tresColumnas--inputText">
+                <p>Tipo de conector del cargador:</p>
+                <select name="" id="">
+                  <option value="0" selected>-------------</option>
+                  <option value="0">CEE (Type E/F)</option>
+                  <option value="0">BS 1383 (Type G)</option>
+                  <option value="0">IEC 60309-2</option>
+                  <option value="0">Tipo 1 J1772</option>
+                  <option value="0">Tipo 2 MENNEKES</option>
+                  <option value="0">GB/Tw</option>
+                  <option value="0">CHAdeMO</option>
+                  <option value="0">CCS1</option>
+                  <option value="0">CCS2</option>
+                  <option value="0">Combo CCS1 y CCS2</option>
+                </select>
+              </section>
+            </section>
+          </section>
+        </section>
+
+        <section class="formulario__separadoresTitulo">
+
+          <p >
+            4. Datos de la fuente de generación. *
           </p>
-          <span></span>
+          <img src="../../public/images/more_black.svg" alt="">
+        </section>
 
-          <section class="formulario__dosColumnas">
-            <section class="formulario__dosColumnas--inputText">
-              <p>Correo electronico:</p>
-              <input type="text" name="" id="" />
-            </section>
-            <section class="formulario__dosColumnas--inputText">
-              <p>Teléfono:</p>
-              <input type="text" name="" id="" />
-            </section>
-          </section>
+                
+        <section class="contenedorBorde" id="datosSuministro">
+          <section class="contenedorWidth">
 
-          <p class="formulario__separadores">
-            Datos del domicilio donde se requiere el servicio
-          </p>
-          <span></span>
 
-          <section class="formulario__tresColumnas">
-            <section class="formulario__tresColumnas--inputText">
-              <p>Calle, no. Exterior:</p>
-              <input type="text" name="" id="" />
-            </section>
-            <section class="formulario__tresColumnas--inputText">
-              <p>Código Postal:</p>
-              <input type="text" name="" id="" />
-            </section>
-            <section class="formulario__tresColumnas--inputText">
-              <p>Colonia:</p>
-              <input type="text" name="" id="" />
-            </section>
-          </section>
-
-          <section class="formulario__dosColumnas">
-            <section class="formulario__dosColumnas--inputText">
-              <p>Delegación/Municipio:</p>
-              <input type="text" name="" id="" />
-            </section>
-            <section class="formulario__dosColumnas--inputText">
-              <p>Entidad Federativa:</p>
-              <input type="text" name="" id="" />
-            </section>
-          </section>
-
-          <p class="formulario__separadores">Coordeandas geográficas</p>
-          <span></span>
-
-          <section class="formulario__tresColumnas">
-            <section class="formulario__tresColumnas--inputText">
-              <p>Altitud:</p>
-              <input type="text" name="" id="" />
-            </section>
-            <section class="formulario__tresColumnas--inputText">
-              <p>Latitud:</p>
-              <input type="text" name="" id="" />
-            </section>
-          </section>
-
-          <p class="formulario__separadores">
-            Registro de Usuario (RMU/RPU cuando aplique)
-          </p>
-          <span></span>
-
-          <section class="formulario__tresColumnas">
-            <section class="formulario__tresColumnas--inputText">
-              <p>Usuario:</p>
-              <input type="text" name="" id="" />
-            </section>
           </section>
         </section>
 
-        <p class="formulario__separadoresTitulo">
-          Datos del Servicio de Suminsitro Eléctrico
-        </p>
-        <span></span>
-
-        <section class="formulario__dosColumnas">
-          <section class="formulario__dosColumnas--inputText">
-            <p>Nivel de Tensión:</p>
-            <select name="" id="">
-              <option value="0" selected>-------------</option>
-              <option value="1">Media Tensión</option>
-              <option value="2">Baja Tensión</option>
-            </select>
-          </section>
-
-          <section class="formulario__dosColumnas--inputText">
-            <p>Tipo de Inmueble:</p>
-            <select name="" id="">
-              <option value="0" selected>-------------</option>
-              <option value="1">Electrolinera</option>
-              <option value="1">Electroterminal</option>
-              <option value="1">Estación de carga pública</option>
-              <option value="2">
-                Inmueble bajo régimen de propiedad en condominio
-              </option>
-            </select>
-          </section>
-        </section>
-
-        <section class="formulario__tresColumnas">
-          <section class="formulario__tresColumnas--inputText">
-            <p>Demanda a contratar [kW]:</p>
-            <input type="text" name="" id="" />
-          </section>
-
-          <section class="formulario__tresColumnas--inputText">
-            <p>Número de Fases:</p>
-            <input type="text" name="" id="" />
-          </section>
-          <section class="formulario__tresColumnas--inputText">
-            <p>Número de Hilos:</p>
-            <input type="text" name="" id="" />
-          </section>
-        </section>
-
-        <section class="formulario__tresColumnas">
-          <section class="formulario__tresColumnas--inputText">
-            <p>Tensión nominal [kV]:</p>
-            <input type="text" name="" id="" />
-          </section>
-          <section class="formulario__tresColumnas--inputText">
-            <p>Tensión máxima [kV]:</p>
-            <input type="text" name="" id="" />
-          </section>
-          <section class="formulario__tresColumnas--inputText">
-            <p>Tensión mínima [kV]:</p>
-            <input type="text" name="" id="" />
-          </section>
-        </section>
-
-        <p class="formulario__separadoresTitulo">
-          Datos de la Infraestructura de carga
-        </p>
-        <span></span>
-        <section class="formulario__dosColumnas">
-          <section class="formulario__dosColumnas--inputText">
-            <p>Tipo de Cargador:</p>
-            <select name="" id="">
-              <option value="0" selected>-------------</option>
-              <option value="1">Nivel 1</option>
-              <option value="2">Nivel 2</option>
-              <option value="2">Cargador rápido de CC</option>
-            </select>
-          </section>
-
-          <section class="formulario__dosColumnas--inputText">
-            <p>Otras Características:</p>
-            <select name="" id="">
-              <option value="0" selected>-------------</option>
-              <option value="0">Ninguna</option>
-              <option value="1">Unimodal</option>
-              <option value="1">Multimodal</option>
-              <option value="1">Unimodal y Multimodal</option>
-            </select>
-          </section>
-        </section>
-
-        <section class="formulario__tresColumnas">
-          <section class="formulario__tresColumnas--inputText">
-            <p>Número de cargadores a instalar:</p>
-            <input type="text" name="" id="" />
-          </section>
-          <section class="formulario__tresColumnas--inputText">
-            <p>Capacidad nominal de cada cargador:</p>
-            <input type="text" name="" id="" />
-          </section>
-          <section class="formulario__tresColumnas--inputText">
-            <p>Capacidad nominal total:</p>
-            <input type="text" name="" id="" />
-          </section>
-        </section>
-
-        <section class="formulario__tresColumnas">
-          <section class="formulario__tresColumnas--inputText">
-            <p>Marca del cargador:</p>
-            <input type="text" name="" id="" />
-          </section>
-          <section class="formulario__tresColumnas--inputText">
-            <p>Modelo del cargador:</p>
-            <input type="text" name="" id="" />
-          </section>
-          <section class="formulario__tresColumnas--inputText">
-            <p>Tipo de conector del cargador:</p>
-            <select name="" id="">
-              <option value="0" selected>-------------</option>
-              <option value="0">CEE (Type E/F)</option>
-              <option value="0">BS 1383 (Type G)</option>
-              <option value="0">IEC 60309-2</option>
-              <option value="0">Tipo 1 J1772</option>
-              <option value="0">Tipo 2 MENNEKES</option>
-              <option value="0">GB/Tw</option>
-              <option value="0">CHAdeMO</option>
-              <option value="0">CCS1</option>
-              <option value="0">CCS2</option>
-              <option value="0">Combo CCS1 y CCS2</option>
-            </select>
-          </section>
-        </section>
-
-        <p class="formulario__separadoresTitulo">
-          Datos de la fuente de generación
-        </p>
-        <span></span>
 
         <section class="formulario__dosColumnas">
           <section class="formulario__dosColumnas--inputText">
@@ -359,5 +396,6 @@
       </section>
     </main>
     <footer></footer>
+    <script src="../js/formulario.js"></script>
   </body>
 </html>
