--- a/src/css/registrar_infrestuctura_desktop.css
+++ b/src/css/registrar_infrestuctura_desktop.css
@@ -10,13 +10,22 @@ main {
     margin-right: auto;
     font-family: var(--font-montserrat);
 
-    .formulario__contenedorInputs{
+    .contenedorBorde{
       border-left: 0.1rem solid var(--color-gris-bordes);
       border-right: 0.1rem solid var(--color-gris-bordes);
       border-bottom: 0.1rem solid var(--color-gris-bordes);
     }
 
+    .contenedorWidth{
+      width: 90%;
+      margin-left: auto;
+      margin-right: auto;
+    }
+
     .formulario__separadoresTitulo {
+
+      display: flex;
+      justify-content: space-between;
       margin-top: 1rem;
       padding: 1.5rem 0 1.5rem 0;
       font-size: 1.8rem;
@@ -31,6 +40,17 @@ main {
         font-weight: 700;
         text-align: start;
       }
+
+      img{
+        width: 2.5rem;
+        height: 2.5rem;
+        display: inline-block;
+        margin-right: 2rem;
+        border: 0.1rem solid black;
+        border-radius: 2rem;
+        cursor: pointer;
+      }
+
     }
 
     .formulario__separadores {
@@ -48,6 +68,7 @@ main {
       display: flex;
       width: 100%;
       justify-content: space-between;
+      align-items: end;
       .formulario__tresColumnas--inputText {
         width: 30%;
         font-size: 1.6rem;
@@ -108,26 +129,29 @@ main {
       }
     }
     .formulario__dosColumnas {
-      width: 100%;
       display: flex;
-      margin: auto;
+      width: 100%;
+      justify-content: space-between;
+      align-items: end;
       .formulario__dosColumnas--inputText {
-        width: 50%;
+        width: 45%;
         font-size: 1.6rem;
         font-weight: 500;
         input {
-          width: 80%;
+          width: 100%;
           height: 3.5rem;
-          font-size: 2rem;
-
-          background-color: #05060f0a;
-          border-radius: 0.5rem;
           padding: 0 1rem;
-          border: 2px solid transparent;
-          font-size: 1rem;
-          transition: border-color 0.3s cubic-bezier(0.25, 0.01, 0.25, 1) 0s,
-            color 0.3s cubic-bezier(0.25, 0.01, 0.25, 1) 0s,
-            background 0.2s cubic-bezier(0.25, 0.01, 0.25, 1) 0s;
+          border: 0.1rem solid var(--color-gris-bordes);
+          border-radius: 0.4rem;
+          box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
+          -webkit-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+          transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+        }
+
+        input:focus{
+            border-color: #66afe9;
+            outline: 0;
+            box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 8px rgba(102, 175, 233, .6)
         }
 
         input[type="text"] {
@@ -160,17 +184,6 @@ main {
         }
       }
 
-      .formulario__dosColumnas--inputText:hover {
-        input {
-          outline: none;
-          border-color: #05060f;
-        }
-
-        select {
-          outline: none;
-          border-color: #05060f;
-        }
-      }
     }
     .formulario__boton{
       display: flex;
